--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
 
 @layer components{
   .blogCard{
-    @apply space-y-3 max-w-[400px] max-h-[500px] md:w-[400px] cursor-pointer 
+    @apply space-y-3 max-w-[400px] sm:max-w-[450px] md:max-w-[350px] lg:max-w-[350px] h-[400px]  cursor-pointer 
      p-4 rounded-lg border;
   }
   .cardImg{
